--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,25 @@
 {
-    "presets": [
-      [
-        "@babel/env",
-        {
-          "targets": {
-            "edge": "17",
-            "firefox": "60",
-            "chrome": "67",
-            "safari": "11.1",
-          },
-          "useBuiltIns": "usage",
-        }
+  "env": {
+    "development": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "useBuiltIns": "entry"
+          }
+        ]
       ]
-    ]
+    },
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "useBuiltIns": "entry"
+          }
+        ]
+      ],
+      "plugins": ["istanbul"]
+    }
   }
+}
