--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "vue unit test practice",
   "main": "main.js",
   "scripts": {
+    "build": "node ./build/build.js",
     "dev": "webpack-dev-server --inline --progress --host 0.0.0.0 --config ./build/webpack.dev.conf.js",
-    "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config ./build/webpack.test.conf.js  --require ./test/setup.js src/packages/*/__test__/**.spec.js"
+    "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config ./build/webpack.test.conf.js --require test/setup.js test/**/*.spec.js",
+    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=lcov --reporter=text  npm run test",
+    "test:watch": "cross-env NODE_ENV=test mocha-webpack --watch  --webpack-config ./build/webpack.test.conf.js --require test/setup.js --recursive test/**/*.spec.js"
   },
   "author": "dwc",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
@@ -18,22 +22,37 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
-    "@vue/test-utils": "^1.0.0-beta.32",
+    "@babel/register": "^7.8.6",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "@vue/test-utils": "1.0.0-beta.25",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-istanbul": "^6.0.0",
     "cache-loader": "^4.1.0",
+    "chalk": "^3.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-vue": "^5.2.2",
     "expect": "^25.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.13.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "^16.2.1",
     "jsdom-global": "^3.0.2",
-    "mocha": "^7.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "mocha": "6.2.1",
     "mocha-webpack": "^2.0.0-beta.0",
+    "mochapack": "^1.1.13",
+    "nyc": "15.0.0",
+    "ora": "^4.0.3",
+    "progress-bar-webpack-plugin": "^1.12.1",
     "sass-loader": "^8.0.2",
+    "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^3.0.0",
     "vue-loader": "^15.9.0",
     "vue-style-loader": "^4.1.2",
@@ -41,6 +60,26 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.3.1",
-    "webpack-merge": "^4.2.2"
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false,
+    "require": [
+      "@babel/register"
+    ],
+    "extension": [
+      ".vue",
+      ".js"
+    ],
+    "include": [
+      "src/**/*.vue",
+      "src/**/*.js"
+    ],
+    "exclude": [
+      "src/coverage"
+    ]
   }
 }
