--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 sudo: required
 language: node_js
-node_js: - '8'
+node_js: 
+  - '8'
 
 script:
-- npm test
-- npm run coverage
-- npm run build
+  - npm test
+  - npm run coverage
+  - npm run build
