测试覆盖率微标

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ sudo: required
 language: node_js
 node_js: 
   - '12'
-
+install:
+  - npm install -g codecov
 script:
   - npm test
-  - npm run coverage
+  - npm run report-coverage
   - npm run build
+  - export CODECOV_TOKEN="token"
