--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,5 @@ node_js:
 install:
   - npm install -g codecov
 script:
-  - npm test
-  - npm run report-coverage
   - npm run build
-  - export CODECOV_TOKEN="token"
+after_success: npm run report-coverage
