--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "node ./build/build.js",
     "dev": "webpack-dev-server --inline --progress --host 0.0.0.0 --config ./build/webpack.dev.conf.js",
     "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config ./build/webpack.test.conf.js --require test/setup.js test/**/*.spec.js",
-    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=lcov --reporter=text  npm run test",
-    "report-coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=text-lcov > coverage.lcov && codecov npm run test",
+    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=lcov --reporter=json  npm run test",
+    "report-coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=json && codecov -f  coverage/coverage-final.json npm run test",
     "test:watch": "cross-env NODE_ENV=test mocha-webpack --watch  --webpack-config ./build/webpack.test.conf.js --require test/setup.js --recursive test/**/*.spec.js"
   },
   "author": "dwc",
