--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ sudo: required
 language: node_js
 node_js: 
   - '12'
-install:
-  - npm install -g codecov
 script:
   - npm run build
-after_success: npm run report-coverage
+  - npm run coverage
+  - npm run report-coverage
+
