--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "node ./build/build.js",
     "dev": "webpack-dev-server --inline --progress --host 0.0.0.0 --config ./build/webpack.dev.conf.js",
     "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config ./build/webpack.test.conf.js --require test/setup.js test/**/*.spec.js",
-    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=lcov --reporter=json  npm run test",
-    "report-coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=json && codecov -f  coverage/coverage-final.json npm run test",
+    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=lcov  npm run test",
+    "report-coverage": "bash ./upload-codecov.sh -t f153218a-570f-4773-9842-89d3cdc6f487",
     "test:watch": "cross-env NODE_ENV=test mocha-webpack --watch  --webpack-config ./build/webpack.test.conf.js --require test/setup.js --recursive test/**/*.spec.js"
   },
   "author": "dwc",
@@ -32,6 +32,7 @@
     "cache-loader": "^4.1.0",
     "chalk": "^3.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "codecov": "^3.6.5",
     "compression-webpack-plugin": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
