--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "node ./build/build.js",
     "dev": "webpack-dev-server --inline --progress --host 0.0.0.0 --config ./build/webpack.dev.conf.js",
     "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config ./build/webpack.test.conf.js --require test/setup.js test/**/*.spec.js",
-    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=lcov  npm run test",
+    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=json  npm run test",
     "report-coverage": "bash ./upload-codecov.sh -t f153218a-570f-4773-9842-89d3cdc6f487",
     "test:watch": "cross-env NODE_ENV=test mocha-webpack --watch  --webpack-config ./build/webpack.test.conf.js --require test/setup.js --recursive test/**/*.spec.js"
   },
