--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "node ./build/build.js",
     "dev": "webpack-dev-server --inline --progress --host 0.0.0.0 --config ./build/webpack.dev.conf.js",
     "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config ./build/webpack.test.conf.js --require test/setup.js test/**/*.spec.js",
-    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=json  npm run test",
+    "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=json --reporter=text  npm run test",
     "report-coverage": "bash ./upload-codecov.sh -t f153218a-570f-4773-9842-89d3cdc6f487",
-    "test:watch": "cross-env NODE_ENV=test mocha-webpack --watch  --webpack-config ./build/webpack.test.conf.js --require test/setup.js --recursive test/**/*.spec.js"
+    "test:watch": "cross-env NODE_ENV=test mocha-webpack --watch  --webpack-config ./build/webpack.test.conf.js --require test/setup.js --recursive test/**/*.spec.js",
+    "test:jest": "cross-env NODE_ENV=test jest --coverage"
   },
   "author": "dwc",
   "license": "ISC",
@@ -25,8 +26,9 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/register": "^7.8.6",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
-    "@vue/test-utils": "1.0.0-beta.25",
+    "@vue/test-utils": "^1.0.0-beta.25",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-istanbul": "^6.0.0",
     "cache-loader": "^4.1.0",
@@ -44,6 +46,8 @@
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.13.0",
     "istanbul-instrumenter-loader": "^3.0.1",
+    "jest": "^25.1.0",
+    "jest-serializer-vue": "^2.0.2",
     "jsdom": "^16.2.1",
     "jsdom-global": "^3.0.2",
     "mini-css-extract-plugin": "^0.9.0",
@@ -56,6 +60,7 @@
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^3.0.0",
+    "vue-jest": "4.0.0-beta.2",
     "vue-loader": "^15.9.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
@@ -67,6 +72,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "nyc": {
+    "all": true,
     "sourceMap": false,
     "instrument": false,
     "require": [
@@ -83,5 +89,28 @@
     "exclude": [
       "src/coverage"
     ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{vue,js}"
+    ],
+    "coverageReporters": [
+      "html",
+      "text"
+    ],
+    "coverageProvider": "v8",
+    "snapshotSerializers": ["jest-serializer-vue"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      ".*\\.(vue)$": "vue-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
