--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "cross-env NODE_ENV=test mocha-webpack --webpack-config ./build/webpack.test.conf.js --require test/setup.js test/**/*.spec.js",
     "coverage": "cross-env NODE_ENV=test nyc --cmd ./  --reporter=json --reporter=text  npm run test",
     "report-coverage": "bash ./upload-codecov.sh -t f153218a-570f-4773-9842-89d3cdc6f487",
-    "test:watch": "cross-env NODE_ENV=test mocha-webpack --watch  --webpack-config ./build/webpack.test.conf.js --require test/setup.js --recursive test/**/*.spec.js",
+    "test:watch": "cross-env NODE_ENV=test mocha-webpack --watch --timeout 100000  --webpack-config ./build/webpack.test.conf.js --require test/setup.js --recursive test/**/*.spec.js",
     "test:jest": "cross-env NODE_ENV=test jest --coverage",
     "coverag1e": "codecov"
   },
